--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <option value="FPS"></option>
               <option value="RPG"></option>
               <option value="Strategy"></option>
+              <option value="Horror"></option>
             </datalist>
           </div>
         </div>
